--- a/views/purchaseAndServices/show.ejs
+++ b/views/purchaseAndServices/show.ejs
@@ -10,7 +10,15 @@
     </label></h6>
   <p>Data: <label name="data">
       <%= formattedDate %>
-    </label> | <label name="setor">Setor: <%= sector.description %></label></p>
+      <% if(unit.description == 'Sede Ramiro'){%>
+      </label> | <label name="setor">Setor: <%= sector.description %> Cidade: Cachoeira do Sul</label></p>
+    <% } else if(unit.description == 'Medicina do Trabalho'){%>
+    </label> | <label name="setor">Unidade: <%= unit.description %> Cidade: Cachoeira do Sul</label></p>
+    <% } else if(unit.description == 'Clínica'){%>
+    </label> | <label name="setor">Unidade: <%= unit.description %> Cidade: Cachoeira do Sul</label></p>
+    <% }else{%>
+    </label> | <label name="setor">Unidade: <%= unit.description %> Cidade: <%= unit.city %> </label></p>
+    <% } %>
 </div>
 <hr>
 <br>
