--- a/views/registrations/sendmail.ejs
+++ b/views/registrations/sendmail.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header_registrations.ejs') %>
-
+  <img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px">
   <div class="registration-form">
     <form action="/recover/alter_password" method="post" accept-charset="utf-8">
       <div class="form-icon">
