--- a/views/suppliers/index.ejs
+++ b/views/suppliers/index.ejs
@@ -1,5 +1,5 @@
-<%-  include('../partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
+  <img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px">
+  <h2>Fornecedores</h2>
 
-<h2>Fornecedores</h2>
-
-<%- include('../partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
