--- a/views/dashboard/aproved.ejs
+++ b/views/dashboard/aproved.ejs
@@ -1,89 +1,88 @@
 <%- include('../partials/header.ejs') %>
-  <div class="space">
-    <h1>Solicitações Aprovadas</h1>
+  <img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px">
+  <h1>Solicitações Aprovadas</h1>
 
-    <table id="myTable" class="table table-striped table-bordered">
-      <thead>
+  <table id="myTable" class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Solicitação</th>
+        <th scope="col">Data</th>
+        <th scope="col">Status</th>
+        <th scope="col">Detalhes</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <% if(payments !=undefined){ payments.forEach(payment=> {
+        // Format the date using JavaScript
+        let formattedDate = new Date(payment.createdAt).toLocaleDateString('pt-BR', {
+        day: '2-digit',
+        month: '2-digit',
+        year: 'numeric'
+        }); %>
+
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Tipo</th>
-          <th scope="col">Solicitação</th>
-          <th scope="col">Data</th>
-          <th scope="col">Status</th>
-          <th scope="col">Detalhes</th>
+          <th scope="row">
+            <%= payment.id %>
+          </th>
+          <td>Pagamento</td>
+          <td>
+            <%= payment.description.substring(0, 30) %>
+          </td>
+          <td>
+            <%= formattedDate %>
+          </td>
+          <td>
+            <%= payment.status %>
+          </td>
+          <td><a href="/payments/<%= payment.id %>">Detalhes</a></td>
         </tr>
-      </thead>
-      <tbody>
 
-        <% if(payments !=undefined){ payments.forEach(payment=> {
-          // Format the date using JavaScript
-          let formattedDate = new Date(payment.createdAt).toLocaleDateString('pt-BR', {
-          day: '2-digit',
-          month: '2-digit',
-          year: 'numeric'
-          }); %>
+        <% }); } %>
 
-          <tr>
-            <th scope="row">
-              <%= payment.id %>
-            </th>
-            <td>Pagamento</td>
-            <td>
-              <%= payment.description.substring(0, 30) %>
-            </td>
-            <td>
-              <%= formattedDate %>
-            </td>
-            <td>
-              <%= payment.status %>
-            </td>
-            <td><a href="/payments/<%= payment.id %>">Detalhes</a></td>
-          </tr>
+          <% if(purchases !=undefined){ purchases.forEach(purchase=> {
+            // Format the date using JavaScript
+            let formattedDate = new Date(purchase.createdAt).toLocaleDateString('pt-BR', {
+            day: '2-digit',
+            month: '2-digit',
+            year: 'numeric'
+            }); %>
 
-          <% }); } %>
+            <tr>
+              <th scope="row">
+                <%= purchase.id %>
+              </th>
+              <td>Compra</td>
+              <td>
+                <%= purchase.justification.substring(0, 30) %>
+              </td>
+              <td>
+                <%= formattedDate %>
+              </td>
+              <td>
+                <%= purchase.status %>
+              </td>
+              <td>
+                <a href="/purchases/<%= purchase.id %>">Detalhes</a>
+              </td>
+            </tr>
 
-            <% if(purchases !=undefined){ purchases.forEach(purchase=> {
-              // Format the date using JavaScript
-              let formattedDate = new Date(purchase.createdAt).toLocaleDateString('pt-BR', {
-              day: '2-digit',
-              month: '2-digit',
-              year: 'numeric'
-              }); %>
-
-              <tr>
-                <th scope="row">
-                  <%= purchase.id %>
-                </th>
-                <td>Compra</td>
-                <td>
-                  <%= purchase.justification.substring(0, 30) %>
-                </td>
-                <td>
-                  <%= formattedDate %>
-                </td>
-                <td>
-                  <%= purchase.status %>
-                </td>
-                <td>
-                  <a href="/purchases/<%= purchase.id %>">Detalhes</a>
-                </td>
-              </tr>
-
-              <% }); } %>
+            <% }); } %>
 
 
-      </tbody>
-    </table>
+    </tbody>
+  </table>
 
-    <script>
-      var table = new DataTable('#myTable', {
-        language: {
-          url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
-        },
+  <script>
+    var table = new DataTable('#myTable', {
+      language: {
+        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+      },
 
-        order: 'desc'
-      });
+      order: 'desc'
+    });
 
-    </script>
-  </div>
+  </script>
   <%- include('../partials/footer.ejs') %>
