--- a/views/dashboard/pending.ejs
+++ b/views/dashboard/pending.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header.ejs') %>
+  <img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px">
   <div class="space">
     <h1>Solicitações Pendentes</h1>
 
