--- a/views/purchaseAndServices/revision_orcament.ejs
+++ b/views/purchaseAndServices/revision_orcament.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header.ejs') %>
-<div class="formSpace">
+  <img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px">
   <div class="sobreposicaoForm">
     <h2>Revisão Orçamentária</h2>
   </div>
@@ -20,32 +20,29 @@
       </thead>
       <tbody>
 
-        <% 
-            let count = 1;
-           
-            items.forEach(item => { %>
-        <script>
-          $.jMaskGlobals.watchDataMask = true;
-        </script>
-        <tr>
-          <td class="col-md-1"><input type="number" min=1 name="amount<%=count %>" class="form-control" id="quantidade1" value="<%= item.amount %>" required placeholder="0" disabled /></td>
+        <% let count=1; items.forEach(item=> { %>
+          <script>
+            $.jMaskGlobals.watchDataMask = true;
+          </script>
+          <tr>
+            <td class="col-md-1"><input type="number" min=1 name="amount<%=count %>" class="form-control" id="quantidade1" value="<%= item.amount %>" required placeholder="0" disabled /></td>
 
-          <td class="col-md-3"><input type="text" name="item<%=count %>" class="form-control" id="item1" value="<%= item.item %>" required placeholder="Item" disabled /></td>
+            <td class="col-md-3"><input type="text" name="item<%=count %>" class="form-control" id="item1" value="<%= item.item %>" required placeholder="Item" disabled /></td>
 
-          <td class="col-md-4"><input type="text" name="description<%=count %>" class="form-control" id="especificacao1" value="<%= item.description %>" required placeholder="Especificação" disabled /></td>
+            <td class="col-md-4"><input type="text" name="description<%=count %>" class="form-control" id="especificacao1" value="<%= item.description %>" required placeholder="Especificação" disabled /></td>
 
-          <td class="col-md-2"><input type="text" name="value<%=count %>" class="form-control" id="valor1" value="<%= item.value %>" required placeholder="Valor" disabled /></td>
+            <td class="col-md-2"><input type="text" name="value<%=count %>" class="form-control" id="valor1" value="<%= item.value %>" required placeholder="Valor" disabled /></td>
 
-        </tr>
+          </tr>
 
-        <tr>
-          <td class="col-md-1"><input type="number" min=1 name="newamount<%=count %>" class="form-control" id="newquantidade<%=count %>" value="<%= item.amount %>" required placeholder="0" /></td>
-          <td class="col-md-3"><input type="text" name="newitem<%=count %>" class="form-control" id="newitem<%=count %>" value="<%= item.item %>" required placeholder="Item" /></td>
-          <td class="col-md-4"><input type="text" name="newdescription<%=count %>" class="form-control" id="newespecificacao<%=count %>" value="<%= item.description %>" required placeholder="Especificação" /></td>
-          <td class="col-md-2"><input type="text" name="newvalue<%=count %>" data-mask='###.###.##0,00' data-mask-reverse='true' class="form-control" id="newvalor<%=count %>" placeholder="Altere o valor" /></td>
-        </tr>
+          <tr>
+            <td class="col-md-1"><input type="number" min=1 name="newamount<%=count %>" class="form-control" id="newquantidade<%=count %>" value="<%= item.amount %>" required placeholder="0" /></td>
+            <td class="col-md-3"><input type="text" name="newitem<%=count %>" class="form-control" id="newitem<%=count %>" value="<%= item.item %>" required placeholder="Item" /></td>
+            <td class="col-md-4"><input type="text" name="newdescription<%=count %>" class="form-control" id="newespecificacao<%=count %>" value="<%= item.description %>" required placeholder="Especificação" /></td>
+            <td class="col-md-2"><input type="text" name="newvalue<%=count %>" data-mask='###.###.##0,00' data-mask-reverse='true' class="form-control" id="newvalor<%=count %>" placeholder="Altere o valor" /></td>
+          </tr>
 
-        <% count++;  }); %>
+          <% count++; }); %>
 
 
 
@@ -60,6 +57,5 @@
     <textarea name="justification" required placeholder="Informe a justificativa" rows="5" cols="180" disabled> <%= purchase.justification %>  </textarea>
     <button style="margin-top:10px; margin-bottom:15px;" type="submit" class="btn btn-info">Enviar</button>
   </form>
-</div>
-</div>
-<%- include('../partials/footer.ejs') %>
+  </div>
+  <%- include('../partials/footer.ejs') %>
