--- a/views/registrationsToken/index.ejs
+++ b/views/registrationsToken/index.ejs
@@ -24,9 +24,11 @@
 
 <hr>
 
-<% if (token) { %>
-<p><%= token %></p>
-<%}%>
+<% if(message) { console.log(message) %>
+  <script>
+    alert("<%=message%>");
+  </script>
+  <% } %>
 
 
 
