--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,15 +15,23 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js" type="text/javascript"></script>
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <script src="https://cdn.datatables.net/2.0.2/js/dataTables.js"></script>
   <script src="https://cdn.datatables.net/2.0.2/css/dataTables.dataTables.css"></script>
+
   <link rel="stylesheet" href="../../css/estiloPagamentos.css">
   <link rel="stylesheet" href="../../css/estiloCompras.css">
   <link rel="stylesheet" href="../../css/sidebar.css">
+
+   <!-- switch button bootstrap -->
+   <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+   <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+
 </head>
 
 <body>
@@ -61,16 +69,18 @@
           <li>
             <a href="/registrations_token"><span class="fa fa-address-book mr-3"></span>Cadastro</a>
           </li>
-          <% } %>
-          <!--
-             <li>
+          <li>
             <a href="/users"><span class="fa fa-address-book mr-3""></span>Usuários</a>
             </li>     
-          -->
+          <% } %>
+       
           <%  if(user.permissions.supplier_registration == 1){ %>
           <li>
             <a href=" /suppliers"><span class="fa fa-address-book mr-3""></span>Fornecedores</a>
             </li>
+            <li>
+              <a href="/suppliers_register"><span class="fa fa-address-book mr-3""></span>Cadastrar Fornecedores</a>
+              </li>   
             <% } %>
             <li>
               <a href=" /logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
