--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,5 +1,106 @@
 <%-  include('../partials/header.ejs') %>
 
-<h2>Usuários</h2>
+    
+<% if(message) { console.log(message) %>
+    <script>
+      alert("<%=message%>");
+    </script>
+    <% } %>
+
+
+    <h2 class='mb-4'>Gerenciamento de Usuários</h2>
+    
+    <br>
+    <table id="example" class="table table-striped table-bordered"
+        style="width: 100%">
+
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Login</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            
+            
+               <% listusers.forEach(usuario => { %>
+             
+                <tr>
+                    <td> <%= usuario.id %> </td> 
+                    <td> <%= usuario.login %> </td> 
+                    
+                        <% if(usuario.active == 1){%>
+                            <td> <input id=<%=usuario.id %> type="checkbox" checked data-toggle="toggle" data-onstyle="success"  data-size="xs"></td>
+                   <% }else{ %>
+                         <td> <input id=<%=usuario.id %> type="checkbox" unchecked data-toggle="toggle" data-onstyle="success"  data-size="xs"></td>
+                   <% } %>
+                        	
+                </tr>      
+                
+             <%  }); %>
+    
+             <script type="text/javascript">
+	
+		
+                $('input:checkbox').change(
+                        function(){
+                            if ($(this).is(':checked')) {
+                               // alert($(this).attr("id"));
+                                window.location.href = "/activate_user/" + $(this).attr("id"); 
+                            }else{
+                                
+                                //alert($(this).attr("id"));
+                                window.location.href = "desactivate_user/" + $(this).attr("id"); 
+                            }
+                        });
+                
+                </script>
+            
+            
+        </tbody>
+    </table>
+</div>
+    </div>
+
+  
+
+
+<script type="text/javascript">
+
+var table = new DataTable('#example', {
+    language: {
+        url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+    },
+    
+    order: 'desc'
+});
+    
+</script>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="informacao" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+   <p>teste</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" id="close" data-dismiss="modal">Close</button>
+   <!--  <button type="button" class="btn btn-primary">Save changes</button>       -->
+  </div>
+</div>
+</div>
+
+
+
 
 <%- include('../partials/footer.ejs') %>
