--- a/views/purchaseAndServices/show.ejs
+++ b/views/purchaseAndServices/show.ejs
@@ -5,7 +5,7 @@
 <% if(modal) {  %>
 <script>
   $(document).ready(function() {
-    $('#reproveModal').modal('show');
+    $('#reproveLeaderModal').modal('show');
   });
 </script>
 <% } %>
@@ -184,7 +184,7 @@
 
 
 
-<div class="modal fade" id="reproveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="reproveLeaderModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
