--- a/views/purchaseAndServices/show.ejs
+++ b/views/purchaseAndServices/show.ejs
@@ -2,13 +2,21 @@
 
 <% let formattedDate=new Date(purchase.createdAt).toLocaleDateString('pt-BR', { day: '2-digit' , month: '2-digit' , year: 'numeric' }); %>
 
-<% if(modal) {  %>
+<% if(modal == 'leaders') {  %>
 <script>
   $(document).ready(function() {
     $('#reproveLeaderModal').modal('show');
   });
 </script>
-<% } %>
+<% }else if(modal == 'directors'){%>
+
+  <script>
+    $(document).ready(function() {
+      $('#reproveDirectorModal').modal('show');
+    });
+  </script>
+
+  <% } %>
 
 
 
@@ -210,7 +218,31 @@
   </div>
 </div>
 
+<div class="modal fade" id="reproveDirectorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Recusar solicitação</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form action="/purchase/reprove/directors" method="post">
 
+          <input type="text" name="id" class="form-control" value="<%= purchase.id %>" hidden>
+          <label for="message-text" class="col-form-label">Motivo:</label>
+          <textarea name="motivo" class="form-control" id="message-text"></textarea>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-danger">Recusar</button>
+      </div>
+      </form>
+    </div>
+  </div>
+</div>
 
 
 <%- include('../partials/footer.ejs') %>
